--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "svgo": "^3.2.0",
     "tea-oss-042": "^1.2.3",
     "urix": "^0.1.0",
+   "brew": "^0.0.8",
     "w3c-hr-time": "^1.0.2",
     "web3": "^4.6.0",
     "workbox-cacheable-response": "^7.0.0",
